--- a/public/myapp/css/certificates/certificate.css
+++ b/public/myapp/css/certificates/certificate.css
@@ -1,5 +1,13 @@
 body {
     background-image: url('img/background.jpg');
+    /* height: 50%; */
+    /* You must set a specified height */
+    /* background-position: center; */
+    /* Center the image */
+    /* background-repeat: no-repeat; */
+    /* Do not repeat the image */
+    /* background-size: cover; */
+    /* Resize the background image to cover the entire container */
 }
 
 .alg-center {
