--- a/public/myapp/css/uni.css
+++ b/public/myapp/css/uni.css
@@ -58,7 +58,7 @@ a {
 }
 
 .header_img img {
-    width: 40px
+    width: 35px
 }
 
 .header_usrname {
@@ -166,11 +166,13 @@ a {
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
     }
     .header_img {
-        width: 30px;
-        height: 40px
+        width: 35px;
+        height: 40px;
+        justify-content: center;
+        border-radius: 50%;
     }
     .header_img img {
-        width: 35px
+        width: 40px
     }
     .l-navbar {
         left: 0;
