--- a/public/myapp/css/mycss.css
+++ b/public/myapp/css/mycss.css
@@ -13,16 +13,31 @@
 .accordion-item-cuadrante {
     background-color: #0055C3;
 }
+
 .accordion-item-module {
     background-color: #028BE9;
 }
+
 .accordion-item-course {
+    background-color: #17B2F4;
+}
+
+.cuadrante-color {
+    background-color: #0055C3;
+}
+
+.module-color {
+    background-color: #028BE9;
+}
+
+.course-color {
     background-color: #17B2F4;
 }
 
 .accordion-button::after {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
+
 .accordion-button:not(.collapsed)::after {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
@@ -37,7 +52,10 @@
     background-color: #0055C3;
 }
 
-.accordion-button-cuadrante:link, .accordion-button-cuadrante:visited, .accordion-button-cuadrante:hover, .accordion-button-cuadrante:active  {
+.accordion-button-cuadrante:link,
+.accordion-button-cuadrante:visited,
+.accordion-button-cuadrante:hover,
+.accordion-button-cuadrante:active {
     background-color: #0055C3;
     text-decoration: none;
     border: hidden;
@@ -49,12 +67,16 @@
     color: white !important;
     background-color: #028BE9;
 }
+
 .accordion-button-module:not(.collapsed) {
     color: white !important;
     background-color: #028BE9;
 }
 
-.accordion-button-module:link, .accordion-button-module:visited, .accordion-button-module:hover, .accordion-button-module:active  {
+.accordion-button-module:link,
+.accordion-button-module:visited,
+.accordion-button-module:hover,
+.accordion-button-module:active {
     background-color: #028BE9;
     text-decoration: none;
     border: hidden;
@@ -66,12 +88,16 @@
     color: white !important;
     background-color: #17B2F4;
 }
+
 .accordion-button-course:not(.collapsed) {
     color: white !important;
     background-color: #17B2F4;
 }
 
-.accordion-button-course:link, .accordion-button-course:visited, .accordion-button-course:hover, .accordion-button-course:active  {
+.accordion-button-course:link,
+.accordion-button-course:visited,
+.accordion-button-course:hover,
+.accordion-button-course:active {
     background-color: #17B2F4;
     text-decoration: none;
     border: hidden;
