--- a/public/myapp/css/uni.css
+++ b/public/myapp/css/uni.css
@@ -92,8 +92,9 @@ a {
     display: grid;
     grid-template-columns: max-content max-content;
     align-items: center;
-    column-gap: 1rem;
-    padding: .5rem 0 .5rem 1.5rem
+    column-gap: .5rem;
+    padding: .5rem 0 .5rem 1.5rem;
+    font-size: 12px;
 }
 
 .nav_logo {
@@ -113,7 +114,7 @@ a {
 .nav_link {
     position: relative;
     color: var(--first-color-light);
-    margin-bottom: 1.5rem;
+    /* margin-bottom: 1.5rem; */
     transition: .3s
 }
 
